fix: Preventing fixed footer from overlapping content
    - check here for more detail: https://stackoverflow.com/questions/2744690/preventing-fixed-footer-from-overlapping-content/44657664#:~:text=You%20can%20add%20margin-bottom,it%20from%20overlapping%20the%20content.

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,17 @@
-*{
+* {
   box-sizing: border-box;
 }
 /* Body */
-body{
+body {
   background-color: #eee;
+}
+.main-content {
+  padding-bottom: 80px;
 }
 /* /Body */
 
 /* Post */
-.main-post{
+.main-post {
   background-color: #fff;
   padding: 20px;
   border: 2px solid #d8d8d8;
@@ -23,15 +26,15 @@ body{
 }
 .main-post .post-author,
 .main-post .post-date,
-.main-post .post-comments{
+.main-post .post-comments {
   font-size: 12px;
 }
-.main-post .post-img{
+.main-post .post-img {
   display: block;
   margin: 10px;
 }
 
-.main-post .post-content{
+.main-post .post-content {
   line-height: 1.7;
   color: #888;
 }
@@ -40,7 +43,6 @@ body{
   font-size: 12px;
 }
 /* /Post*/
-
 
 /* Footer */
 .footer {
